objects/Meeting_Junction__c.object
<CustomObject>
    <description>This object is a junction object between GMPL/BX009 and Meeting ID object such that we can establish many to many relationship between both of them</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field will allow user to capture any comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <description>This field will capture review committee&apos;s decision specific to the GMPL</description>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Conditionally Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discussion_Gate__c</fullName>
        <description>This field captures the Gate for which the discussion was held for the specific GMPL</description>
        <inlineHelpText>Gate for which discussion was held</inlineHelpText>
        <label>Discussion Gate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC0</fullName>
                </value>
                <value>
                    <fullName>PC1</fullName>
                </value>
                <value>
                    <fullName>PC2</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>PLR</fullName>
                </value>
                <value>
                    <fullName>BRB Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G0_Actual_Date__c</fullName>
        <description>G0 Actual Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC0 Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G0_Commit_Date__c</fullName>
        <description>G0 Commit Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC0 Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G0_Plan_Date__c</fullName>
        <description>G0 Plan Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC0 Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G0_Target_Date__c</fullName>
        <description>G0 Target Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC0 Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G0_Trend_Date__c</fullName>
        <description>GO Trend Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC0 Trend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G1_Actual_Date__c</fullName>
        <description>G1 Actual Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC1 Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G1_Commit_Date__c</fullName>
        <description>G1 Commit Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC1 Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G1_Plan_Date__c</fullName>
        <description>G1 Plan Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC1 Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G1_Target_Date__c</fullName>
        <description>G1 Target Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC1 Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G1_Trend_Date__c</fullName>
        <description>G1 Trend Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC1 Trend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G3_Actual_Date__c</fullName>
        <description>G3 Actual Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC2 Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G3_Commit_Date__c</fullName>
        <description>G3 Commit Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC2 Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G3_Plan_Date__c</fullName>
        <description>G3 Plan Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC2 Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G3_Target_Date__c</fullName>
        <description>G3 Target Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC2 Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G3_Trend_Date__c</fullName>
        <description>G3 Trend Date</description>
        <inlineHelpText>If no value is entered, then this field will be populated with the corresponding value from the GMPL, however user would have the ability to overwrite the value updated by system.</inlineHelpText>
        <label>PC2 Trend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GMPL_BX009__c</fullName>
        <description>This field will be used to associate a GMPL/ BX009 to the Meeting Junction</description>
        <label>GMPL/BX009</label>
        <referenceTo>GMPL_BX009__c</referenceTo>
        <relationshipLabel>Meeting Outcome Summaries</relationshipLabel>
        <relationshipName>Meeting_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <formula>Meeting_ID__r.Meeting_Date__c</formula>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is used to associate a Meeting ID to the GMPL</description>
        <label>Meeting ID</label>
        <referenceTo>Meeting_ID__c</referenceTo>
        <relationshipName>Meeting_Junctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Meeting Outcome Summary</label>
    <nameField>
        <displayFormat>MJ-{00000}</displayFormat>
        <label>Meeting Outcome Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Outcome Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>